--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -334,7 +334,7 @@
           <button
           [class.active]="operatorsType === 'operators'"
             (click)="operatorsType = 'operators'"
-          >Opedores</button>
+          >Operators</button>
           <button
           [class.active]="operatorsType === 'players'"
           (click)="operatorsType = 'players'">Players</button>
@@ -519,7 +519,7 @@
               </li>
             </ul>
             <p>
-              This frictionless process keeps players engaged, making betting fast, intuitive, and accessible from their favorite messaging apps.
+              A frictionless process keeps players engaged, making betting fast, intuitive, and accessible from their favorite messaging apps.
             </p>
           </div>
         </div>
@@ -604,7 +604,7 @@
   <div class="third-section">
     <div class="third-flex">
       <div class="image-section" style="display: flex">
-        <img src="../../../../assets/img/Frame6.png" alt="" />
+        <img src="../../../../assets/img/NFrame6.png" alt="" />
       </div>
       <div class="text">
         <span class="TitleTag" id="security">Security</span>
