--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
@@ -10,6 +10,7 @@ h1,h2,h3,h4,h5,h6{
 
 .TitleBold3{
   font-family: "Poppins-Bold", sans-serif;
+  margin-bottom: -4px;
   span{
       color: black
   }
