--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -47,6 +47,8 @@
             <ng-lottie [options]="secondoptions" class="lottie-animation"> </ng-lottie>
           </ng-template>
         </div>
+        <span class="TitleBold3">{{ 'heroSection.secondtitle' | translate }}</span>
+
         <div class="texto">
           <p>{{ 'heroSection.description' | translate }}</p>
           
@@ -234,7 +236,7 @@
       <div class="text">
         <span class="TitleTag" id="benefits">{{ 'benefits.operators.descriptionHeader' | translate }}</span>
         <h1>{{ 'benefits.operators.title' | translate }}</h1>
-        <p>{{ 'benefits.operators.description' | translate }}</p>
+       <!--  <p>{{ 'benefits.operators.description' | translate }}</p> -->
 
         <div class="top-buttons">
           <button [class.active]="operatorsType === 'operators'" (click)="operatorsType = 'operators'">
@@ -470,7 +472,7 @@
           <a href="#contactanos">{{ 'provenSuccess.cta' | translate }}</a>
         </div>
       </div>
-      <div class="image-section" style="display: flex">
+      <div class="image-provensection" style="display: flex">
         <img [src]="currentImages['img1']" alt="" />
       </div>
     </div>
