--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -19,7 +19,12 @@ p{
     text-align: justify;
 }
 
-
+.image-provensection{
+    width: 30%;
+    @media screen and (max-width: 900px){
+        width: 100%;
+    }
+ }
 .tag{
 display: flex;
 justify-content: center;
@@ -98,9 +103,9 @@ align-items: center;
     }
 }
 h1{
-    font-size: 2rem;
+    font-size: 2.6rem;
     font-weight: bold;
-    font-family: "Poppins-Medium", sans-serif;
+    font-family: "Poppins-Bold", sans-serif;
     margin-top: 24px;
     margin-bottom: 0;
     @media (max-width: 900px){
@@ -688,12 +693,14 @@ h3{
         @media (max-width: 900px) {
             display: block;    
         }
+
+        
         .text{
             font-family: 'Poppins', sans-serif;
             color: black;
             width: 45%;
             margin-left: 1.5rem;
-
+            top: 0;
             @media screen and (max-width: 900px){
                 width: 100%;
                 margin-left: 0;
