--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -639,10 +639,11 @@ h3{
 }
 
     /* Table */
-    .table{
+    .table {
         display: flex;
         flex-direction: column;
-        width: 97%;
+        width: 100%;
+        max-width: 100%;
         align-items: center;
         justify-content: center;
         text-align: center;
@@ -651,49 +652,58 @@ h3{
         margin-top: 2rem;
         font-family: 'Poppins', sans-serif;
         box-shadow: 0 4px 10px rgba(149, 149, 255, 0.5);
-        font-size: clamp(0.6rem, 1.5vw, 1.1rem);
-
-    
-        @media (max-width: 749px){
+        font-size: clamp(0.8rem, 1.5vw, 1.1rem);
+        overflow-x: auto;
+        box-sizing: border-box;
+      
+        @media (max-width: 900px) {
+          font-size: 0.8rem;
+          border-radius: 30px;
+        }
+      
+        @media (max-width: 600px) {
+          font-size: 0.7rem;
+          padding: 0.5rem;
+          border-radius: 20px;
+        }
+      
+        td {
+          padding: 0.7rem;
+          @media (max-width: 600px) {
+            padding: 0.3rem;
+          }
+        }
+      
+        th {
+          padding: 0 1.5rem;
+          font-size: clamp(0.8rem, 1.5vw, 1.2rem);
+          @media (max-width: 900px) {
+            padding: 0 1rem;
             font-size: 0.8rem;
+          }
+          @media (max-width: 600px) {
+            padding: 0 0.5rem;
+            font-size: 0.7rem;
+          }
         }
-        
-        td{
-            padding: 0.7rem;
-            @media (max-width: 749px){
-                padding: 0.3rem;
-            }
-        }
-        th{
-            padding: 0 3rem;
-            font-size: clamp(0.8rem, 1.5vw, 1.2rem);
-            @media (max-width: 749px){
-                font-size: clamp(0.4rem, 1.5vw, 0.9rem);
-            }
-        @media (min-width:750px) and (max-width:900px){
-            font-size: clamp(0.7rem, 2vw, 0.9rem);
-        }
-        }
+      
         .thtitle {
-            color: #5554F3;
-            font-size: clamp(0.5rem, 2vw, 1.5rem);
-            font-weight: bold;  
-            .feature{
-            text-align: left;
-           /*  @media (max-width: 900px){
-                font-size: 0.5rem;
-          
-            } */
+          color: #5554F3;
+          font-size: clamp(1rem, 2vw, 1.5rem);
+          font-weight: bold;
+          @media (max-width: 600px) {
+            font-size: 0.8rem;
+          }
         }
+      
+        .tdtitle {
+          text-align: left;
+          font-size: clamp(0.8rem, 1.5vw, 1.1rem);
+          @media (max-width: 600px) {
+            font-size: 0.7rem;
+          }
         }
-
-        .tdtitle{
-            text-align: left;
-
-            @media (max-width: 900px){
-                font-size: clamp(0.2rem, 1.5vw, 1.2rem);}
-        }
-    }
+      }
 
     .separator {
         width: 100%;
