--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -902,6 +902,10 @@ h3{
                      margin: 4px;
                      font-weight: 700;
                      border:none;
+
+                     @media screen and (max-width: 900px){
+                        font-size: 12px;
+                     }
                    }
                    button.active {
                     background-color: #5554F3; 
