--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -2,17 +2,28 @@
   <div class="background">
     <!-- <img src="./assets/Background/nuevoheader.png" alt="" /> -->
   </div>
-
+  
   <header>
     <div class="section-header">
-      <img class="chatbetone" src="./assets/Icon/Layer_1.png" alt="{{ 'header.logoAlt' | translate }}" />
-
-      <div class="newidioma">
-        <a href="" (click)="switchLanguage('en')"> {{ 'header.languageSwitch.english' | translate }} </a>
-        <a href="">|</a>
-        <a href="" (click)="switchLanguage('es')"> {{ 'header.languageSwitch.spanish' | translate }} </a>
+      <div class="mobileheader">
+        <img class="chatbetone" src="./assets/Icon/Layer_1.png" alt="{{ 'header.logoAlt' | translate }}" />
+        <div class="newidioma">
+          <a href="" (click)="switchLanguage('en')"> {{ 'header.languageSwitch.english' | translate }} </a>
+          <a href="">|</a>
+          <a href="" (click)="switchLanguage('es')"> {{ 'header.languageSwitch.spanish' | translate }} </a>
+        </div>
+        <button class="menu-toggle" aria-label="Toggle menu" (click)="toggleMenu()">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+        
       </div>
-      <div class="navbar">
+
+
+      <div class="menu-overlay" [class.active]="isMenuOpen" (click)="toggleMenu()"></div>
+
+      <div class="navbar" [class.active]="isMenuOpen">
         <a href="#feature">{{ 'header.navigation.features' | translate }}</a>
         <a href="#benefits">{{ 'header.navigation.benefits' | translate }}</a>
         <a href="#HowDoesitWork">{{ 'header.navigation.howItWorks' | translate }}</a>
@@ -300,8 +311,6 @@
   </div>
 </div>
 <hr class="hr" />
-
-<!-- Resto del HTML con el mismo patrón de traducción -->
 
 <!-- 3.5 Tabla de Beneficios -->
 <div id="funciones" class="section">
