--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
@@ -99,9 +99,13 @@ h1{
   margin-top: 24px;
   margin-bottom: 0;
   @media (max-width: 900px){
-      font-size: 1.8rem;
-      width: 100%;
-  }
+    font-size: 2rem;
+    align-items: center;
+    font-weight: 900;
+    width: 100%;
+    font-family: "Poppins", sans-serif;
+
+}
 }
 h3{
   font-size: 1.5rem;
