--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -109,8 +109,12 @@ h1{
     margin-top: 24px;
     margin-bottom: 0;
     @media (max-width: 900px){
-        font-size: 1.8rem;
+        font-size: 2rem;
+        align-items: center;
+        font-weight: 900;
         width: 100%;
+        font-family: "Poppins", sans-serif;
+
     }
 }
 h3{
