--- a/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
+++ b/src/app/Chat-Bet/pages/spotlight/spotlight.component.scss
@@ -80,8 +80,12 @@ h1,h2,h3,h4,h5,h6{
     margin-top: 24px;
     margin-bottom: 0;
     @media (max-width: 900px){
-        font-size: 1.8rem;
+        font-size: 2rem;
+        align-items: center;
+        font-weight: 900;
         width: 100%;
+        font-family: "Poppins", sans-serif;
+
     }
   }
   h3{
