--- a/src/app/Chat-Bet/pages/main-page/main-page.component.html
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.html
@@ -431,7 +431,9 @@
 
         <div class="texto" *ngIf="NewOperatorsType === 'players'">
           <div class="secondlist">
-            <span class="TitleBold3">{{ 'howItWorks.players.title' | translate }}</span>
+            <br />
+            <span class="TitleBold3">{{ 'howItWorks.players.secondtitle' | translate }}</span>
+            <!-- <span class="TitleBold3">{{ 'howItWorks.players.title' | translate }}</span> -->
             <p>{{ 'howItWorks.players.description' | translate }}</p>
             <ul>
               <li>
@@ -671,7 +673,7 @@
   </div>
 </div>
 
-<div class="backgroundline">
+<!-- <div class="backgroundline">
   <div class="fotter1">
     <img [src]="currentImages['footer']" alt="" />
   </div>
@@ -680,3 +682,4 @@
     <img [src]="currentImages['footer2'] " alt="" />
   </div>
 </div>
+ -->
