--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.html
@@ -180,11 +180,11 @@
   </div>
 </div>
 
-<div class="backgroundline">
+<!-- <div class="backgroundline">
   <div class="fotter1">
     <img [src]="currentImages['footer']" alt="" />
   </div>
   <div class="fotter2">
     <img [src]="currentImages['footer2']" alt="" />
   </div>
-</div>
+</div> -->
