--- a/src/app/Chat-Bet/pages/spotlight/spotlight.component.html
+++ b/src/app/Chat-Bet/pages/spotlight/spotlight.component.html
@@ -85,7 +85,7 @@
 
 
 
-<div class="backgroundline">
+<!-- <div class="backgroundline">
   <div class="fotter1">
     <img [src]="currentImages['footer']" alt="" />
   </div>
@@ -93,4 +93,4 @@
   <div class="fotter2">
     <img [src]="currentImages['footer2']" alt="" />
   </div>
-</div>
+</div> -->
