--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
@@ -753,7 +753,10 @@ h1, h2, h3, h4, h5, h6 {
     justify-content: space-between;
     overflow: hidden;
     width: 100%;
-    @media (max-width: 900px) { display: flex; flex-direction: column; }
+    @media (max-width: 900px) { 
+        display: flex; 
+        flex-direction: column; 
+        align-items: center;}
     .carousel-item {
       flex: 1;
       text-align: center;
