--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
@@ -1,6 +1,7 @@
 h1, h2, h3, h4, h5, h6 {
     color: black;
     font-family: "Poppins", sans-serif;
+    margin: 0;
   }           
   .TitleBold, .TitleBold2 {
     font-family: "Poppins-Bold", sans-serif;
@@ -97,7 +98,7 @@ h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
     font-family: "Poppins-Bold", sans-serif;
     margin-top: 24px;
-    margin-bottom: 0;
+    line-height: 1.2; /* Mejora la legibilidad y evita superposiciones */
     @media (max-width: 900px) {
       font-size: 2rem;
       align-items: center;
