--- a/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
+++ b/src/app/Chat-Bet/pages/aboutus/aboutus.component.scss
@@ -99,6 +99,7 @@ h1, h2, h3, h4, h5, h6 {
     font-family: "Poppins-Bold", sans-serif;
     margin-top: 24px;
     line-height: 1.2; /* Mejora la legibilidad y evita superposiciones */
+    margin-bottom: 2rem;
     @media (max-width: 900px) {
       font-size: 2rem;
       align-items: center;
