--- a/src/app/Chat-Bet/pages/main-page/main-page.component.scss
+++ b/src/app/Chat-Bet/pages/main-page/main-page.component.scss
@@ -108,6 +108,7 @@ h1{
     font-weight: bold;
     font-family: "Poppins-Bold", sans-serif;
     margin-top: 24px;
+    margin-bottom: 2rem;
     line-height: 1.2; /* Mejora la legibilidad y evita superposiciones */
    
     @media (max-width: 900px){
